[package]
name = "tudo"
version = "0.1.0"
edition = "2024"
rust-version = "1.85"
description = "A fast, keyboard-driven terminal todo manager with groups, subtasks, and notes."
authors = ["Unae Kang, u.naeeeeeee@gmail.com"]
license = "MIT OR Apache-2.0"
repository = "https://github.com/u-nae/tudo"
homepage = "https://github.com/u-nae/tudo"
readme = "README.md"
keywords = ["tui", "todo", "cli", "productivity", "ratatui"]
categories = ["command-line-utilities"]
exclude = ["docs/", "target/", "*.json"]

[dependencies]
crossterm = "0.28.0"
ratatui = "0.29.0"
unicode-width = "0.2"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
